--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
+<!-- item_product.xml -->
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -12,13 +13,13 @@
         android:scaleType="fitCenter" />
 
     <LinearLayout
-        android:layout_width="246dp"
+        android:id="@+id/productDetailsLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_toEndOf="@id/productImageView"
         android:layout_centerVertical="true"
         android:layout_marginStart="8dp"
-        android:layout_toEndOf="@id/productImageView"
         android:orientation="vertical">
-
 
         <TextView
             android:id="@+id/refIdTextView"
@@ -53,8 +54,5 @@
             android:textColor="#131313"
             android:textSize="14sp"
             android:textStyle="bold" />
-
-
     </LinearLayout>
-
 </RelativeLayout>
